service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app: go-app
    service: go-app
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: go-app
