gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-app
spec:
  hosts:
    - "*"
  gateways:
    - go-app-gateway
  http:
    - match:
        - uri:
            exact: /foo
        - uri:
            exact: /bar
      route:
        - destination:
            host: go-app
            port:
              number: 9080
